<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Inicio_sesion">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarA"
        android:background="#131f30"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">


        <TextView
            android:text="@string/Login"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/letrauno"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="animacion_inicio_sesion.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/Correo"
                android:hint="@string/Correo"
                android:textColor="#000"
                android:inputType="textEmailAddress"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/Contrasena"
                android:hint="@string/Contrasena"
                android:textColor="#000"
                android:inputType="textPassword"
                android:background="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Ingresar"
            android:text="@string/Ingresar"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#fff">
        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>